# project-astrophage

./: .gitignore  CLAUDE.md  PROJECT_DOCS.md  README.md
backend/: .env.example  .gitignore  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_user_universe_visibility.py
backend/app/: main.py
backend/app/core/: config.py  database.py  dependencies.py  security.py
backend/app/models/: base.py  galaxy.py  star.py  user.py  view_event.py  wormhole.py
backend/app/repositories/: galaxy_repo.py  star_repo.py  user_repo.py  view_event_repo.py
backend/app/routers/: auth.py  explore.py  galaxies.py  stars.py
backend/app/schemas/: auth.py  galaxy.py  star.py
backend/app/services/: auth_service.py  embedding.py  galaxy_service.py  lifecycle.py  star_service.py  umap_service.py
backend/docs/: PROJECT_SKILLSET.md
backend/tests/: conftest.py  test_auth.py  test_galaxies.py  test_stars.py
frontend/: index.html  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
frontend/docs/: PROJECT_SKILLSET.md
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/three/: BoundedMapControls.tsx  StarMesh.tsx  (+2 more)
frontend/src/hooks/: useGalaxies.ts  useStars.ts
frontend/src/lib/: axios.ts
frontend/src/pages/: ExplorePage.tsx  GalaxyPage.tsx  LoginPage.tsx  PublicUniversePage.tsx  RegisterPage.tsx  StarPage.tsx  UniversePage.tsx
frontend/src/stores/: authStore.ts  galaxyStore.ts  starStore.ts  uiStore.ts
frontend/src/types/: api.ts
(+6 files in other folders)
